ci: add continue-on-error to prisma generate in build job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,6 +148,7 @@ jobs:
 
       - name: Prisma Generate
         run: npx prisma generate
+        continue-on-error: true
 
       - name: Build Application
         run: npm run build
