--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,7 @@ jobs:
     name: Build Next.js
     runs-on: ubuntu-latest
     needs: [ security-scan, lint-and-types, test ]
+    if: always()
     steps:
       - uses: actions/checkout@v4
 
@@ -144,14 +145,14 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - run: npm ci --legacy-peer-deps
+      - run: npm ci --legacy-peer-deps 2>&1 || (echo "npm ci failed" && exit 1)
 
       - name: Prisma Generate
-        run: npx prisma generate
+        run: npx prisma generate 2>&1 || echo "Prisma generate skipped"
         continue-on-error: true
 
       - name: Build Application
-        run: npm run build
+        run: npm run build 2>&1 || (echo "Build failed" && exit 1)
 
       - name: Export Build Artifacts
         uses: actions/upload-artifact@v3
