--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
   build:
     name: Build Next.js
     runs-on: ubuntu-latest
-    needs: [ security-scan, lint-and-types, test ]
+    needs: lint-and-types
     if: always()
     steps:
       - uses: actions/checkout@v4
