--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,6 @@ jobs:
     name: Build Next.js
     runs-on: ubuntu-latest
     needs: lint-and-types
-    if: always()
     steps:
       - uses: actions/checkout@v4
 
@@ -145,14 +144,14 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - run: npm ci --legacy-peer-deps 2>&1 || (echo "npm ci failed" && exit 1)
+      - run: npm ci --legacy-peer-deps
 
       - name: Prisma Generate
-        run: npx prisma generate 2>&1 || echo "Prisma generate skipped"
+        run: npx prisma generate
         continue-on-error: true
 
       - name: Build Application
-        run: npm run build 2>&1 || (echo "Build failed" && exit 1)
+        run: npm run build
 
       - name: Export Build Artifacts
         uses: actions/upload-artifact@v3
@@ -160,6 +159,7 @@ jobs:
           name: next-build
           path: .next/
           retention-days: 7
+        continue-on-error: true
 
   # ========== DEPLOYMENT (Optional - on main only) ==========
   deploy-preview:
