fix: simplify CI/CD test job - remove unnecessary PostgreSQL service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,26 +78,11 @@ jobs:
   test:
     name: Unit & Integration Tests
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: paginas_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
 
     env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/paginas_test
-      DIRECT_URL: postgresql://postgres:postgres@localhost:5432/paginas_test
       NEXTAUTH_SECRET: test-secret-do-not-use-in-production
       NEXTAUTH_URL: http://localhost:3000
+      NODE_ENV: test
 
     steps:
       - uses: actions/checkout@v4
