--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,15 +93,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci --verbose
 
-      # Prisma setup for testing
-      - name: Prisma Generate
-        run: npx prisma generate
-
-      - name: Run Tests
-        run: npm test 2>&1
-        continue-on-error: false
+      - name: Run Tests (Verbose)
+        run: npm test -- --verbose 2>&1
 
       - name: Upload Coverage (if exists)
         uses: codecov/codecov-action@v3
