--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,8 @@ jobs:
       NEXTAUTH_SECRET: test-secret-do-not-use-in-production
       NEXTAUTH_URL: http://localhost:3000
       NODE_ENV: test
+      PRISMA_SKIP_VALIDATION_WARNING: true
+      PRISMA_TELEMETRY_DISABLED: 1
 
     steps:
       - uses: actions/checkout@v4
@@ -97,6 +99,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --verbose
+
+      - name: Prisma Generate
+        run: npx prisma generate
 
       - name: Run Tests (Verbose)
         run: npm test -- --verbose 2>&1
@@ -114,6 +119,8 @@ jobs:
     name: Build Next.js
     runs-on: ubuntu-latest
     needs: [ lint-and-types, test ]
+    env:
+      PRISMA_TELEMETRY_DISABLED: 1
     steps:
       - uses: actions/checkout@v4
 
