--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
@@ -72,6 +72,7 @@
     "eslint-config-next": "^16.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.1.1",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
