chore: project audit - optimize root directory, fix TypeScript paths, enhance tests
- Reorganized root directory: moved 15 feature docs to docs/ folder
- Enhanced tsconfig.json with multi-source path mappings (src/lib support)
- Fixed TypeScript path resolution for SEO modules
- Removed unused parameters and imports
- Updated test fixtures with proper StaticAssetReference structure
- Fixed offset calculation in deployment history route
- Enhanced API route type safety
- Created comprehensive AUDIT_REPORT.md documenting all changes

Root directory optimized from 40 files to 23 essential files (42.5% reduction)
All critical TypeScript errors resolved
Project ready for production deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,26 +40,34 @@
       "@/*": [
         "./*"
       ],
+      "@/src/*": [
+        "./src/*"
+      ],
       "@/app/*": [
         "./app/*"
       ],
       "@/components/*": [
-        "./components/*"
+        "./components/*",
+        "./src/components/*"
       ],
       "@/lib/*": [
+        "./src/lib/*",
         "./lib/*"
       ],
       "@/utils/*": [
-        "./utils/*"
+        "./utils/*",
+        "./src/utils/*"
       ],
       "@/hooks/*": [
+        "./src/hooks/*",
         "./hooks/*"
       ],
       "@/styles/*": [
         "./styles/*"
       ],
       "@/types/*": [
-        "./types/*"
+        "./types/*",
+        "./src/types/*"
       ],
       "@/services/*": [
         "./services/*"
