--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
     "@sentry/nextjs": "^7.80.0",
+    "@sentry/profiling-node": "^10.26.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
@@ -49,6 +50,7 @@
     "pino-pretty": "^10.3.0",
     "postcss": "^8.4.32",
     "prisma": "^5.8.0",
+    "rate-limiter-flexible": "^8.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
