--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ci": "npm run lint && npm run type-check && npm run test && npm run build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.935.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
     "@sentry/nextjs": "^7.80.0",
@@ -44,8 +45,10 @@
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
+    "lucide-react": "^0.554.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
     "pino": "^10.1.0",
     "pino-pretty": "^10.3.0",
     "postcss": "^8.4.32",
@@ -59,6 +62,7 @@
     "tailwindcss": "^4.0.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
+    "vitest": "^4.0.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
