--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,25 +145,28 @@ jobs:
           path: .next/
           retention-days: 7
 
-  # ========== DEPLOYMENT (Optional - on main only) ==========
+  # ========== PREVIEW DEPLOYMENT ==========
   deploy-preview:
     name: Deploy Preview (if on main)
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: [ build ]
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
       - name: Deploy to Staging
+        if: env.VERCEL_TOKEN != ''
+        run: |
+          npm i -g vercel
+          vercel pull --yes --environment=preview --token="${VERCEL_TOKEN}"
+          vercel build --prod --token="${VERCEL_TOKEN}"
+          vercel deploy --prebuilt --prod --token="${VERCEL_TOKEN}"
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        run: |
-          npm i -g vercel
-          vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-          vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-          vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
         continue-on-error: true
 
   # ========== FINAL STATUS REPORT ==========
