feat: Implementar login demo, corrigir logger e configurar ambiente de desenvolvimento
- Simplificar logger Pino para evitar thread-stream issues
- Criar rota de login com credenciais demo (sem dependência de banco)
- Adicionar 3 usuários de teste: admin, operador pizza bella, operador eletro santos
- Corrigir import de seed.ts (caminhos relativos)
- Adicionar package.json seed configuration
- Criar .env.local com variáveis de desenvolvimento
- Interface de login pronta para testes

Credenciais de teste:
- admin@paginas-comercio.com / admin123456 (SUPERADMIN)
- operador@pizzabella.com / operador123456 (CLIENTE_ADMIN)
- admin@eletrosantos.com / operador123456 (CLIENTE_ADMIN)

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "npm": ">=9.0.0"
   },
   "prisma": {
-    "schema": "db/prisma/schema.prisma"
+    "schema": "db/prisma/schema.prisma",
+    "seed": "ts-node --transpile-only db/prisma/seed.ts"
   }
 }
