--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "redis": "^5.10.0",
     "sharp": "^0.32.0",
     "stripe": "^14.0.0",
     "tailwindcss": "^4.0.0",
