--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Plataforma Multi-Tenant para Páginas de Comércio Local",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
