--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.0.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
