--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "lucide-react": "^0.554.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.13",
     "postcss": "^8.4.32",
