--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "lucide-react": "^0.554.0",
+    "mercadopago": "^2.11.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.13",
     "postcss": "^8.4.32",
