--- a/.env.example
+++ b/.env.example
@@ -1,60 +1,145 @@
-# Environment Configuration
-# Copy this file to .env.local and fill in your values
+# =============================================================================
+# 🔐 VARIÁVEIS DE AMBIENTE - VITRINAFAST
+# =============================================================================
+# ATENÇÃO: Copie este arquivo para .env.local e preencha com seus valores reais
+# NUNCA commite o .env.local no repositório!
+# =============================================================================
 
-# === Application ===
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_NAME="Páginas para o Comércio"
-NODE_ENV=development
+# -----------------------------------------------------------------------------
+# 🔑 AUTENTICAÇÃO (NextAuth.js)
+# -----------------------------------------------------------------------------
 
-# === NextAuth ===
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-change-in-production-min-32-chars
+# Secret para criptografia de sessões JWT (OBRIGATÓRIO)
+# Gerar com: openssl rand -base64 32
+NEXTAUTH_SECRET="gerar-um-secret-de-pelo-menos-32-caracteres-aqui"
 
-# === Database ===
-DATABASE_URL=postgresql://user:password@localhost:5432/paginas_comercio
-DIRECT_URL=postgresql://user:password@localhost:5432/paginas_comercio
+# URL da aplicação (OBRIGATÓRIO em produção)
+NEXTAUTH_URL="http://localhost:3000"
 
-# === Storage (S3/DigitalOcean Spaces) ===
-NEXT_PUBLIC_STORAGE_TYPE=s3
-S3_ENDPOINT=https://nyc3.digitaloceanspaces.com
-S3_REGION=nyc3
-S3_BUCKET=paginas-comercio
-S3_ACCESS_KEY_ID=your-access-key
-S3_SECRET_ACCESS_KEY=your-secret-key
-NEXT_PUBLIC_S3_URL=https://paginas-comercio.nyc3.digitaloceanspaces.com
+# -----------------------------------------------------------------------------
+# 🗄️ BANCO DE DADOS (Prisma)
+# -----------------------------------------------------------------------------
 
-# === CDN ===
-NEXT_PUBLIC_CDN_URL=https://cdn.example.com
+# URL de conexão com PostgreSQL
+DATABASE_URL="postgresql://user:password@localhost:5432/paginas_comercio"
+DIRECT_URL="postgresql://user:password@localhost:5432/paginas_comercio"
 
-# === Payment (Stripe) ===
-STRIPE_SECRET_KEY=sk_test_your_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key
-STRIPE_WEBHOOK_SECRET=whsec_test_your_webhook_secret
+# -----------------------------------------------------------------------------
+# 💳 MERCADO PAGO (OBRIGATÓRIO para pagamentos)
+# -----------------------------------------------------------------------------
 
-# === Analytics ===
-NEXT_PUBLIC_SENTRY_DSN=https://your-sentry-dsn@sentry.io/your-project-id
-SENTRY_AUTH_TOKEN=your-sentry-auth-token
+# Access Token (Obter em: https://www.mercadopago.com.br/developers/panel/app)
+# ⚠️ USE TEST-... APENAS EM DESENVOLVIMENTO
+# ⚠️ USE APP_USR-... EM PRODUÇÃO
+MERCADOPAGO_ACCESS_TOKEN="TEST-seu-token-de-teste"
 
-# === Redis (BullMQ) ===
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+# Public Key (para frontend)
+MERCADOPAGO_PUBLIC_KEY="TEST-sua-public-key"
 
-# === Email ===
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=noreply@paginas-comercio.com
+# 🔐 SEGURANÇA: Webhook Secret (OBRIGATÓRIO para produção)
+# Obter em: Configurações do Webhook no painel MP
+MERCADOPAGO_WEBHOOK_SECRET="seu-webhook-secret-do-mercado-pago"
 
-# === Third-party APIs ===
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# -----------------------------------------------------------------------------
+# 💳 STRIPE (Alternativa ao Mercado Pago)
+# -----------------------------------------------------------------------------
 
-# === Feature Flags ===
-NEXT_PUBLIC_FEATURE_ANALYTICS=true
-NEXT_PUBLIC_FEATURE_CUSTOM_DOMAIN=true
-NEXT_PUBLIC_FEATURE_WEBHOOKS=true
+STRIPE_SECRET_KEY="sk_test_your_secret_key"
+STRIPE_PUBLISHABLE_KEY="pk_test_your_publishable_key"
+STRIPE_WEBHOOK_SECRET="whsec_test_your_webhook_secret"
 
-# === Logging ===
-LOG_LEVEL=info
-ENABLE_MORGAN=true
+# -----------------------------------------------------------------------------
+# 🖼️ CLOUDINARY (Armazenamento de Imagens - OBRIGATÓRIO)
+# -----------------------------------------------------------------------------
+
+# Obter em: https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME="seu-cloud-name"
+CLOUDINARY_API_KEY="sua-api-key"
+CLOUDINARY_API_SECRET="sua-api-secret"
+CLOUDINARY_URL="cloudinary://API_KEY:API_SECRET@CLOUD_NAME"
+
+# -----------------------------------------------------------------------------
+# 📦 S3/DigitalOcean Spaces (Alternativa ao Cloudinary)
+# -----------------------------------------------------------------------------
+
+NEXT_PUBLIC_STORAGE_TYPE="cloudinary"
+S3_ENDPOINT="https://nyc3.digitaloceanspaces.com"
+S3_REGION="nyc3"
+S3_BUCKET="paginas-comercio"
+S3_ACCESS_KEY_ID="your-access-key"
+S3_SECRET_ACCESS_KEY="your-secret-key"
+NEXT_PUBLIC_S3_URL="https://paginas-comercio.nyc3.digitaloceanspaces.com"
+NEXT_PUBLIC_CDN_URL="https://cdn.example.com"
+
+# -----------------------------------------------------------------------------
+# 🔴 REDIS (Cache e Rate Limiting)
+# -----------------------------------------------------------------------------
+
+# Opcional - se não configurado, usa rate limiting em memória
+REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD=""
+
+# Vercel KV (se usar Vercel)
+KV_URL="seu-kv-url"
+KV_REST_API_URL="seu-kv-rest-url"
+KV_REST_API_TOKEN="seu-kv-token"
+
+# -----------------------------------------------------------------------------
+# 📧 EMAIL
+# -----------------------------------------------------------------------------
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+SMTP_FROM="noreply@vitrinafast.com"
+
+# -----------------------------------------------------------------------------
+# 🌐 APLICAÇÃO
+# -----------------------------------------------------------------------------
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_NAME="VitrinaFast"
+NODE_ENV="development"
+
+# -----------------------------------------------------------------------------
+# 📊 ANALYTICS E MONITORAMENTO
+# -----------------------------------------------------------------------------
+
+NEXT_PUBLIC_GA_ID="G-XXXXXXXXXX"
+NEXT_PUBLIC_SENTRY_DSN="https://your-sentry-dsn@sentry.io/your-project-id"
+SENTRY_AUTH_TOKEN="your-sentry-auth-token"
+
+# -----------------------------------------------------------------------------
+# 🔐 OAuth (Opcional)
+# -----------------------------------------------------------------------------
+
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# -----------------------------------------------------------------------------
+# ⚙️ FEATURE FLAGS
+# -----------------------------------------------------------------------------
+
+NEXT_PUBLIC_FEATURE_ANALYTICS="true"
+NEXT_PUBLIC_FEATURE_CUSTOM_DOMAIN="true"
+NEXT_PUBLIC_FEATURE_WEBHOOKS="true"
+
+# -----------------------------------------------------------------------------
+# 📝 LOGGING
+# -----------------------------------------------------------------------------
+
+LOG_LEVEL="info"
+ENABLE_MORGAN="true"
+
+# =============================================================================
+# ✅ CHECKLIST ANTES DO DEPLOY EM PRODUÇÃO:
+# =============================================================================
+# [ ] NEXTAUTH_SECRET gerado com openssl (mín 32 chars)
+# [ ] NEXTAUTH_URL apontando para domínio de produção
+# [ ] DATABASE_URL apontando para banco de produção (Supabase/Vercel Postgres)
+# [ ] MERCADOPAGO_ACCESS_TOKEN com token de PRODUÇÃO (APP_USR-...)
+# [ ] MERCADOPAGO_WEBHOOK_SECRET configurado
+# [ ] CLOUDINARY_* com credenciais válidas (regenerar se expostas)
+# [ ] Todas as variáveis configuradas no Vercel Dashboard
+# =============================================================================
