--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "tsx": "^4.7.0"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=9.0.0"
   },
   "prisma": {
