--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_APP_NAME="Páginas para o Comércio"
 
 # ============================================================================
-# DATABASE - PostgreSQL para desenvolvimento local
+# DATABASE - Supabase PostgreSQL
 # ============================================================================
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/paginas_comercio_dev"
-DIRECT_URL="postgresql://postgres:postgres@localhost:5432/paginas_comercio_dev"
+DATABASE_URL="postgresql://postgres.cpkefbgvvtxguhedhoqi:Mp5.Xp%239bTm9T3B@aws-1-us-east-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.cpkefbgvvtxguhedhoqi:Mp5.Xp%239bTm9T3B@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
 
 # ============================================================================
 # JWT & SECURITY
