fix: adicionar postinstall para prisma generate na Vercel

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "description": "Plataforma Multi-Tenant para Páginas de Comércio Local",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --schema=db/prisma/schema.prisma && next build",
+    "postinstall": "prisma generate --schema=db/prisma/schema.prisma",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate --schema=db/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=db/prisma/schema.prisma",
     "prisma:seed": "ts-node --transpile-only db/prisma/seed.ts",
-    "prisma:studio": "prisma studio",
+    "prisma:studio": "prisma studio --schema=db/prisma/schema.prisma",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "test": "jest",
