--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "buildCommand": "prisma generate --schema=db/prisma/schema.prisma && next build",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "functions": {
+    "app/**/*.ts": {
+      "runtime": "nodejs24.x"
+    }
+  }
 }
