fix: remove invalid functions runtime from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "buildCommand": "prisma generate --schema=db/prisma/schema.prisma && next build",
-  "framework": "nextjs",
-  "functions": {
-    "app/**/*.ts": {
-      "runtime": "nodejs24.x"
-    }
-  }
+  "framework": "nextjs"
 }
