--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
+    "@types/react-easy-crop": "^1.16.0",
     "autoprefixer": "^10.4.17",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -41,6 +42,7 @@
     "prisma": "^5.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.51.0",
     "redis": "^5.10.0",
     "sharp": "^0.32.0",
