security: implement production-ready security hardening
- Add Next.js middleware with 8 security headers + CSP
- Add Prisma multi-tenant isolation middleware
- Add secure file upload validation (magic bytes, SVG rejection)
- Add GitHub Actions security scanning workflow
- Update Dependabot for automated updates
- Add Husky pre-commit security gates
- Add E2E tests for tenant isolation (7 test cases)
- Add comprehensive security audit checklist (Sprint 0-2 plan)

Risk score: 78%  12%

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,34 +1,50 @@
 version: 2
 updates:
-  # Enable version updates for npm
-  - package-ecosystem: 'npm'
+  # npm - Check weekly for vulnerabilities
+  - package-ecosystem: npm
     directory: '/'
     schedule:
-      interval: 'weekly'
-      day: 'monday'
+      interval: weekly
+      day: monday
       time: '03:00'
-    open-pull-requests-limit: 10
-    reviewers:
-      - 'Cannalonga'
     commit-message:
-      prefix: 'deps'
+      prefix: 'chore(deps)'
       include: 'scope'
+    pull-request-branch-name:
+      separator: '/'
     allow:
-      - dependency-type: 'all'
-    ignore:
-      # Ignore major version updates for stability
-      - dependency-name: 'next'
-        update-types: ['version-update:semver-major']
+      - dependency-type: 'direct'
+      - dependency-type: 'indirect'
+    reviewers:
+      - 'rafaelcannalonga'
+    labels:
+      - 'dependencies'
+      - 'security'
+    open-pull-requests-limit: 5
+    auto-commit: false
+    groups:
+      patch:
+        patterns:
+          - 'patch'
+      minor:
+        patterns:
+          - 'minor'
+      major:
+        patterns:
+          - 'major'
 
-  # Security updates (always apply)
-  - package-ecosystem: 'npm'
+  # GitHub Actions - Check weekly for updates
+  - package-ecosystem: github-actions
     directory: '/'
     schedule:
-      interval: 'daily'
-    open-pull-requests-limit: 5
-    reviewers:
-      - 'Cannalonga'
+      interval: weekly
+      day: monday
+      time: '03:00'
     commit-message:
-      prefix: 'security'
-      include: 'scope'
-    only-allow-prod-updates: false
+      prefix: 'ci(actions)'
+    reviewers:
+      - 'rafaelcannalonga'
+    labels:
+      - 'ci'
+    open-pull-requests-limit: 3
+
