--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "file-type": "^21.1.1",
     "lucide-react": "^0.554.0",
     "mercadopago": "^2.11.0",
     "next": "^14.1.0",
@@ -53,19 +54,23 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@playwright/test": "^1.40.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^16.0.3",
+    "gitleaks": "^1.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.1.1",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
