--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
 NODE_ENV="test"
-DATABASE_URL="postgresql://postgres.cpkefbgvvtxguhedhoqi:E6gXqt9QnpBawVjH@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
-DATABASE_URL_TEST="postgresql://postgres.cpkefbgvvtxguhedhoqi:E6gXqt9QnpBawVjH@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
+DATABASE_URL=""
+DATABASE_URL_TEST=""
