security(patch-2): BFLA prevention with admin authorization middleware

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,6 +77,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "security-patches/**/*",
+    "**/security-patches/**/*"
   ]
 }
